@@ -1,60 +1,46 @@
 ---
 fixtures:
   repositories:
-    auditd: https://github.com/simp/pupmod-simp-auditd
-    augeasproviders_core:
-      repo: https://github.com/simp/augeasproviders_core
-      ref: 2.4.1
-    augeasproviders_grub:
-      repo: https://github.com/simp/augeasproviders_grub
-      ref: 3.0.0
-    augeasproviders_puppet:
-      repo: https://github.com/simp/augeasproviders_puppet
-      ref: 2.1.1
-    augeasproviders_ssh:
-      repo: https://github.com/simp/augeasproviders_ssh
-      ref: 2.5.3
-    augeasproviders_sysctl:
-      repo: https://github.com/simp/augeasproviders_sysctl
-      ref: 2.2.0
-    compliance_mapper: https://github.com/simp/pupmod-simp-compliance_markup
+    augeasproviders_core: https://github.com/simp/augeasproviders_core
+    augeasproviders_sysctl: https://github.com/simp/augeasproviders_sysctl
     concat:
       # master is beyond 4.1.1, but has breaking changes to
       # how fragments are ordered (MODULES-6625)
       repo: https://github.com/simp/puppetlabs-concat
       ref: 4.1.1
-    datacat:
-      repo: https://github.com/simp/puppet-datacat
-      ref: simp6.0.0-0.6.2
     elasticsearch:
       repo: https://github.com/simp/puppet-elasticsearch
       ref: 5.5.0
     simp_elasticsearch: https://github.com/simp/pupmod-simp-simp_elasticsearch
-    haveged: https://github.com/simp/pupmod-simp-haveged
     iptables: https://github.com/simp/pupmod-simp-iptables
     java:
       repo: https://github.com/simp/puppetlabs-java
       ref: 2.4.0
-    logrotate: https://github.com/simp/pupmod-simp-logrotate
     logstash:
       repo: https://github.com/simp/puppet-logstash
       ref: 5.3.0
-    oddjob: https://github.com/simp/pupmod-simp-oddjob
-    pam: https://github.com/simp/pupmod-simp-pam
     pki: https://github.com/simp/pupmod-simp-pki
     rsync: https://github.com/simp/pupmod-simp-rsync
     rsyslog: https://github.com/simp/pupmod-simp-rsyslog
     simpcat: https://github.com/simp/pupmod-simp-concat
     simplib: https://github.com/simp/pupmod-simp-simplib
-    simp_apache: https://github.com/simp/pupmod-simp-apache
-    simp_options: https://github.com/simp/pupmod-simp-simp_options
-    stdlib:
-      repo: https://github.com/simp/puppetlabs-stdlib
-      ref: 4.24.0
+    simp_apache: https://github.com/simp/pupmod-simp-simp_apache
+    stdlib: https://github.com/simp/puppetlabs-stdlib
     stunnel: https://github.com/simp/pupmod-simp-stunnel
+    systemd:
+      repo: https://github.com/simp/puppet-systemd
+      branch: simp-master
     tcpwrappers: https://github.com/simp/pupmod-simp-tcpwrappers
     yum:
       repo: https://github.com/simp/voxpupuli-yum
       ref: v2.1.0
+
+    # Fixtures needed for the default suite
+    logrotate: https://github.com/simp/pupmod-simp-logrotate
+
+    # Fixtures needed for the elasticsearch suite
+    datacat: https://github.com/simp/puppet-datacat
+    pam: https://github.com/simp/pupmod-simp-pam
+
   symlinks:
     simp_logstash: "#{source_dir}"
